<resources>
    <string name="app_name">CricFrikk App</string>
    <string name="action_settings">Settings</string>
    <string name="text_thread1">Do you think rohit sharma should bat at no 3?</string>
    <string name="text_thread2">Are you Exited for Dhoni vs Pant today?</string>
    <string name="text_thread3">Dont you think RR will again fail provided Jofra is injured?</string>
    <string name="text_thread4">Is williamson better captain than warner</string>

    <string name="news1">Harshal Patel, AB de Villiers help RCB edge tense opener</string>
    <string name="news2">IPL teams unhappy with Padikkals direct entry into RCB bubble</string>
    <string name="news3">London Mayor keen on bringing IPL matches to England capital</string>
    <string name="news4">CSK sign Behrendorff as Hazlewood replacement</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>